RESOLVED - issue JBIDE-2915: Bugs with <rich:extendedDataTable>. https://jira.jboss.org/jira/browse/JBIDE-2915
- Item #2 has been fixed: "Columns, header and footer must have the same widths"
- Item #3 has been fixed: "Default values of width and height attributes are too large. These values must correspond to containing of cells."

git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@11967 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/jsf/plugins/org.jboss.tools.jsf.vpe.richfaces/resources/extendedDataTable/extendedDataTable.css
+++ b/jsf/plugins/org.jboss.tools.jsf.vpe.richfaces/resources/extendedDataTable/extendedDataTable.css
@@ -123,3 +123,7 @@
 	overflow: hidden;
 	border: solid 1px #C4C0C9;
 }
+
+.dr-body-table-tr td {
+	overflow:hidden;
+}
